force-app/main/default/objects/WAC_RPT_Detail_In__c/WAC_RPT_Detail_In__c.object-meta.xml
<CustomObject>
    <description>Data from agencies in detail</description>
    <label>WAC RPT Detail In</label>
    <nameField>
        <displayFormat>WRI{0000000000}</displayFormat>
        <label>NAME (Report Detail Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAC RPT Detail In</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>