force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/BILLING_APT__c.field-meta.xml
<CustomField>
    <fullName>BILLING_APT__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>BILLING APT</label>
    <length>8</length>
    <type>Text</type>
</CustomField>