force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/BILLING_FRCTN__c.field-meta.xml
<CustomField>
    <fullName>BILLING_FRCTN__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>BILLING FRCTN</label>
    <length>3</length>
    <type>Text</type>
</CustomField>