force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/BILLING_HOUSE_NO__c.field-meta.xml
<CustomField>
    <fullName>BILLING_HOUSE_NO__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>BILLING HOUSE NO</label>
    <length>6</length>
    <type>Text</type>
</CustomField>