force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/BILLING_PREFIX__c.field-meta.xml
<CustomField>
    <fullName>BILLING_PREFIX__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>BILLING PREFIX</label>
    <length>2</length>
    <type>Text</type>
</CustomField>