force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/BILLING_ZIP4__c.field-meta.xml
<CustomField>
    <fullName>BILLING_ZIP4__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BILLING ZIP4</label>
    <length>4</length>
    <type>Text</type>
</CustomField>