force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/FIRST_NAME__c.field-meta.xml
<CustomField>
    <fullName>FIRST_NAME__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>FIRST NAME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>