force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/LAST_NAME__c.field-meta.xml
<CustomField>
    <fullName>LAST_NAME__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>LAST NAME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>