force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/RECTYPE__c.field-meta.xml
<CustomField>
    <fullName>RECTYPE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RECTYPE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>