force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/SERVICE_FRCTN__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_FRCTN__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE FRCTN</label>
    <length>3</length>
    <type>Text</type>
</CustomField>