force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/SERVICE_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_SUFFIX__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>SERVICE SUFFIX</label>
    <length>4</length>
    <type>Text</type>
</CustomField>