force-app/main/default/objects/WAC_RPT_Detail_In__c/fields/WAC_RPT_Header__c.field-meta.xml
<CustomField>
    <fullName>WAC_RPT_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WAC RPT</label>
    <referenceTo>WAC_RPT_Header__c</referenceTo>
    <relationshipLabel>WAC RPT Detail In</relationshipLabel>
    <relationshipName>WAC_RPT_Detail_In</relationshipName>
    <type>Lookup</type>
</CustomField>