force-app/main/default/objects/WAC_RPT_Detail_In__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>WAC_RPT_Header__c</columns>
    <columns>NAME</columns>
    <columns>BILLING_APT__c</columns>
    <columns>BILLING_CITY__c</columns>
    <columns>BILLING_FRCTN__c</columns>
    <columns>BILLING_HOUSE_NO__c</columns>
    <columns>BILLING_PREFIX__c</columns>
    <columns>BILLING_STATE__c</columns>
    <columns>BILLING_STREET__c</columns>
    <columns>BILLING_SUFFIX__c</columns>
    <columns>DETAIL_NO__c</columns>
    <columns>BILLING_ZIP__c</columns>
    <columns>BILLING_ZIP4__c</columns>
    <columns>FIRST_NAME__c</columns>
    <columns>LAST_NAME__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>